Update requirements.txt with mediapipe 0.10.14, fix cv2 import

--- a/test.ipynb
+++ b/test.ipynb
@@ -5,7 +5,49 @@
    "execution_count": 1,
    "id": "14798a4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "argc=2\n",
+      "argv[0] = --unused\n",
+      "argv[1] = --start_demo_name=Physics Server\n",
+      "ExampleBrowserThreadFunc started\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "X11 functions dynamically loaded using dlopen/dlsym OK!\n",
+      "Creating context\n",
+      "Created GL 3.3 context\n",
+      "Direct GLX rendering context obtained\n",
+      "Making context current\n",
+      "GL_VENDOR=Intel\n",
+      "GL_RENDERER=Mesa Intel(R) Graphics (ADL GT2)\n",
+      "GL_VERSION=4.6 (Core Profile) Mesa 25.0.7-0ubuntu0.24.04.2\n",
+      "GL_SHADING_LANGUAGE_VERSION=4.60\n",
+      "pthread_getconcurrency()=0\n",
+      "Version = 4.6 (Core Profile) Mesa 25.0.7-0ubuntu0.24.04.2\n",
+      "Vendor = Intel\n",
+      "Renderer = Mesa Intel(R) Graphics (ADL GT2)\n",
+      "b3Printf: Selected demo: Physics Server\n",
+      "startThreads creating 1 threads.\n",
+      "starting thread 0\n",
+      "started thread 0 \n",
+      "MotionThreadFunc thread started\n",
+      "ven = Intel\n",
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: Jan 13 2026 20:02:01\n"
+     ]
+    }
+   ],
    "source": [
     "import pybullet\n",
     "pybullet.connect(pybullet.GUI)\n",
@@ -17,7 +59,16 @@
    "execution_count": 2,
    "id": "9c640561",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ven = Intel\n",
+      "Workaround for some crash in the Intel OpenGL driver on Linux/Ubuntu\n"
+     ]
+    }
+   ],
    "source": [
     "import pybullet_data\n",
     "pybullet.setAdditionalSearchPath(pybullet_data.getDataPath())"
@@ -35,17 +86,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f59750d9",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'kuka_experimental'...\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "128"
+       "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,10 +116,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "f4c5e6d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: No inertial data for link, using mass=1, localinertiadiagonal = 1,1,1, identity local inertial frame\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: tool0\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: No inertial data for link, using mass=1, localinertiadiagonal = 1,1,1, identity local inertial frame\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: Link1\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/base_link.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/base_link.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_1.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_1.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_2.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_2.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_3.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_3.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_4.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_4.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_5.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_5.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_6.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_6.dae\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "robot = pybullet.loadURDF(\"kuka_experimental/kuka_kr210_support/urdf/kr210l150.urdf\")\n"
    ]
@@ -102,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "311edc19",
    "metadata": {},
    "outputs": [],
@@ -114,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "f8c4f806",
    "metadata": {},
    "outputs": [],
@@ -125,10 +258,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d459633b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: No inertial data for link, using mass=1, localinertiadiagonal = 1,1,1, identity local inertial frame\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: tool0\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: No inertial data for link, using mass=1, localinertiadiagonal = 1,1,1, identity local inertial frame\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,126]:\n",
+      "\n",
+      "b3Printf: Link1\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/base_link.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/base_link.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_1.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_1.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_2.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_2.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_3.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_3.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_4.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_4.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_5.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_5.dae\n",
+      "\n",
+      "b3Printf: b3Warning[examples/Importers/ImportURDFDemo/BulletUrdfImporter.cpp,1166]:\n",
+      "\n",
+      "b3Printf: kuka_experimental/kuka_kr210_support/urdf/: cannot extract anything useful from mesh 'kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_6.dae'\n",
+      "\n",
+      "b3Printf: b3Warning[examples/SharedMemory/plugins/tinyRendererPlugin/TinyRendererVisualShapeConverter.cpp,558]:\n",
+      "\n",
+      "b3Printf: issue extracting mesh from COLLADA/STL file kuka_experimental/kuka_kr210_support/meshes/kr210l150/visual/link_6.dae\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "pybullet.resetSimulation()\n",
     "plane = pybullet.loadURDF(\"plane.urdf\")\n",
@@ -141,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "57d7bee3",
    "metadata": {},
    "outputs": [],
@@ -155,10 +363,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "2aa5177b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numActiveThreads = 0\n",
+      "stopping threads\n",
+      "Thread with taskId 0 exiting\n",
+      "Thread TERMINATED\n",
+      "destroy semaphore\n",
+      "semaphore destroyed\n",
+      "destroy main semaphore\n",
+      "main semaphore destroyed\n",
+      "finished\n",
+      "numActiveThreads = 0\n",
+      "btShutDownExampleBrowser stopping threads\n",
+      "Thread with taskId 0 exiting\n",
+      "Thread TERMINATED\n",
+      "destroy semaphore\n",
+      "semaphore destroyed\n",
+      "destroy main semaphore\n",
+      "main semaphore destroyed\n"
+     ]
+    }
+   ],
    "source": [
     "pybullet.disconnect()"
    ]
@@ -180,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
