--- a/hand_landmarker_live.ipynb
+++ b/hand_landmarker_live.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "e7b9225f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "a39d91bb",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "fbb16b4c",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "853b8fae",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "020640b8",
    "metadata": {},
    "outputs": [
@@ -234,6 +234,18 @@
       "- Running mode: VIDEO\n",
       "- Max hands: 2\n",
       "- Detection confidence: 0.5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "I0000 00:00:1768317182.778465   11698 gl_context_egl.cc:85] Successfully initialized EGL. Major : 1 Minor: 5\n",
+      "I0000 00:00:1768317182.780812   11801 gl_context.cc:357] GL version: 3.2 (OpenGL ES 3.2 Mesa 25.0.7-0ubuntu0.24.04.2), renderer: Mesa Intel(R) Graphics (ADL GT2)\n",
+      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n",
+      "W0000 00:00:1768317182.789672   11813 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1768317182.804196   11803 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
      ]
     }
    ],
@@ -279,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "caa8db0b",
    "metadata": {},
    "outputs": [
@@ -289,7 +301,21 @@
      "text": [
       "Camera opened successfully!\n",
       "Press 'q' to quit...\n",
-      "----------------------------------------\n",
+      "----------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/harsh-tandon/capstone/venv/lib/python3.12/site-packages/google/protobuf/symbol_database.py:55: UserWarning: SymbolDatabase.GetPrototype() is deprecated. Please use message_factory.GetMessageClass() instead. SymbolDatabase.GetPrototype() will be removed soon.\n",
+      "  warnings.warn('SymbolDatabase.GetPrototype() is deprecated. Please '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "Quitting...\n",
       "Camera released and windows closed!\n"
@@ -460,7 +486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
