Add blue glove mode for hand landmark detection
- Swap R and B channels to make blue gloves appear orange/skin-colored
- Add runtime toggle with 'b' key press
- Display blue glove mode status on screen
- Fix contiguous array issue for MediaPipe compatibility

--- a/hand_landmarker_live.ipynb
+++ b/hand_landmarker_live.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "e7b9225f",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "a39d91bb",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "fbb16b4c",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "853b8fae",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "020640b8",
    "metadata": {},
    "outputs": [
@@ -240,12 +240,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1768317182.778465   11698 gl_context_egl.cc:85] Successfully initialized EGL. Major : 1 Minor: 5\n",
-      "I0000 00:00:1768317182.780812   11801 gl_context.cc:357] GL version: 3.2 (OpenGL ES 3.2 Mesa 25.0.7-0ubuntu0.24.04.2), renderer: Mesa Intel(R) Graphics (ADL GT2)\n",
-      "INFO: Created TensorFlow Lite XNNPACK delegate for CPU.\n",
-      "W0000 00:00:1768317182.789672   11813 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
-      "W0000 00:00:1768317182.804196   11803 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
+      "I0000 00:00:1768381289.250692    5709 gl_context_egl.cc:85] Successfully initialized EGL. Major : 1 Minor: 5\n",
+      "I0000 00:00:1768381289.252478    6156 gl_context.cc:357] GL version: 3.2 (OpenGL ES 3.2 Mesa 25.0.7-0ubuntu0.24.04.2), renderer: Mesa Intel(R) Graphics (ADL GT2)\n",
+      "W0000 00:00:1768381289.264137    6164 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n",
+      "W0000 00:00:1768381289.280157    6162 inference_feedback_manager.cc:114] Feedback manager requires a model with a single signature inference. Disabling support for feedback tensors.\n"
      ]
     }
    ],
@@ -291,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "caa8db0b",
    "metadata": {},
    "outputs": [
@@ -300,22 +298,20 @@
      "output_type": "stream",
      "text": [
       "Camera opened successfully!\n",
-      "Press 'q' to quit...\n",
-      "----------------------------------------\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/harsh-tandon/capstone/venv/lib/python3.12/site-packages/google/protobuf/symbol_database.py:55: UserWarning: SymbolDatabase.GetPrototype() is deprecated. Please use message_factory.GetMessageClass() instead. SymbolDatabase.GetPrototype() will be removed soon.\n",
-      "  warnings.warn('SymbolDatabase.GetPrototype() is deprecated. Please '\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Press 'q' to quit, 'b' to toggle Blue Glove Mode\n",
+      "----------------------------------------\n",
+      "Blue Glove Mode: OFF\n",
+      "Blue Glove Mode: ON\n",
+      "Blue Glove Mode: OFF\n",
+      "Blue Glove Mode: ON\n",
+      "Blue Glove Mode: OFF\n",
+      "Blue Glove Mode: ON\n",
+      "Blue Glove Mode: OFF\n",
+      "Blue Glove Mode: ON\n",
+      "Blue Glove Mode: OFF\n",
+      "Blue Glove Mode: ON\n",
+      "Blue Glove Mode: OFF\n",
+      "Blue Glove Mode: ON\n",
       "\n",
       "Quitting...\n",
       "Camera released and windows closed!\n"
@@ -332,12 +328,15 @@
     "    print(\"Try changing VideoCapture(0) to VideoCapture(1)\")\n",
     "else:\n",
     "    print(\"Camera opened successfully!\")\n",
-    "    print(\"Press 'q' to quit...\")\n",
+    "    print(\"Press 'q' to quit, 'b' to toggle Blue Glove Mode\")\n",
     "    print(\"-\" * 40)\n",
     "\n",
     "# Variables for FPS calculation\n",
     "prev_time = 0\n",
     "fps = 0\n",
+    "\n",
+    "# Toggle for blue glove mode (swap R and B channels)\n",
+    "BLUE_GLOVE_MODE = True  # Set to True when wearing blue gloves\n",
     "\n",
     "# Main loop - runs until 'q' is pressed\n",
     "while cap.isOpened():\n",
@@ -354,8 +353,16 @@
     "    # Step 3: Convert BGR (OpenCV format) to RGB (MediaPipe format)\n",
     "    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "    \n",
-    "    # Step 4: Create MediaPipe Image object\n",
-    "    mp_image = mp.Image(image_format=mp.ImageFormat.SRGB, data=frame_rgb)\n",
+    "    # Step 3.5: BLUE GLOVE MODE - Swap R and B channels for detection\n",
+    "    # This makes blue gloves appear orange/red, which MediaPipe can detect better\n",
+    "    if BLUE_GLOVE_MODE:\n",
+    "        # Swap R and B channels and make contiguous for MediaPipe\n",
+    "        frame_for_detection = np.ascontiguousarray(frame_rgb[:, :, [2, 1, 0]])\n",
+    "    else:\n",
+    "        frame_for_detection = frame_rgb\n",
+    "    \n",
+    "    # Step 4: Create MediaPipe Image object (use color-swapped frame for detection)\n",
+    "    mp_image = mp.Image(image_format=mp.ImageFormat.SRGB, data=frame_for_detection)\n",
     "    \n",
     "    # Step 5: Get current timestamp in milliseconds (required for VIDEO mode)\n",
     "    timestamp_ms = int(time.time() * 1000)\n",
@@ -363,7 +370,8 @@
     "    # Step 6: Run hand detection\n",
     "    detection_result = detector.detect_for_video(mp_image, timestamp_ms)\n",
     "    \n",
-    "    # Step 7: Draw landmarks on the frame\n",
+    "    # Step 7: Draw landmarks on the ORIGINAL frame (not color-swapped)\n",
+    "    # This way the display looks normal but detection uses swapped colors\n",
     "    annotated_frame = draw_landmarks_on_image(frame_rgb, detection_result)\n",
     "    \n",
     "    # Step 8: Convert back to BGR for OpenCV display\n",
@@ -371,7 +379,7 @@
     "    \n",
     "    # Step 9: Calculate and display FPS\n",
     "    current_time = time.time()\n",
-    "    fps = 1 / (current_time - prev_time) if prev_time > 0 else 0\n",
+    "    fps = 1 / (current_time - prev_btime) if prev_time > 0 else 0\n",
     "    prev_time = current_time\n",
     "    \n",
     "    # Draw FPS on the frame\n",
@@ -399,13 +407,31 @@
     "        cv2.LINE_AA\n",
     "    )\n",
     "    \n",
+    "    # Show blue glove mode status\n",
+    "    mode_text = \"Blue Glove Mode: ON (press 'b' to toggle)\" if BLUE_GLOVE_MODE else \"Blue Glove Mode: OFF (press 'b' to toggle)\"\n",
+    "    cv2.putText(\n",
+    "        annotated_frame_bgr,\n",
+    "        mode_text,\n",
+    "        (10, 110),\n",
+    "        cv2.FONT_HERSHEY_SIMPLEX,\n",
+    "        0.7,\n",
+    "        (255, 165, 0) if BLUE_GLOVE_MODE else (128, 128, 128),\n",
+    "        2,\n",
+    "        cv2.LINE_AA\n",
+    "    )\n",
+    "    \n",
     "    # Step 10: Display the frame in a window\n",
     "    cv2.imshow('Hand Landmark Detection - Press Q to Quit', annotated_frame_bgr)\n",
     "    \n",
-    "    # Step 11: Check for 'q' key press to exit\n",
-    "    if cv2.waitKey(1) & 0xFF == ord('q'):\n",
+    "    # Step 11: Check for key presses\n",
+    "    key = cv2.waitKey(1) & 0xFF\n",
+    "    if key == ord('q'):\n",
     "        print(\"\\nQuitting...\")\n",
     "        break\n",
+    "    elif key == ord('b'):\n",
+    "        BLUE_GLOVE_MODE = not BLUE_GLOVE_MODE\n",
+    "        status = \"ON\" if BLUE_GLOVE_MODE else \"OFF\"\n",
+    "        print(f\"Blue Glove Mode: {status}\")\n",
     "\n",
     "# Cleanup: Release the camera and close windows\n",
     "cap.release()\n",
@@ -442,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "e5e97848",
    "metadata": {},
    "outputs": [
